--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- MAIN STYLE -->
     <link rel="stylesheet" href="css/tooplate-style.css">
-
+    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon">
   </head>
   <body>
 
