--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
+    <meta name="og:description" content="مرحبا بكم في موقعي الخاص">
+    <meta name="keywords" content="مواقع, قوالب, دسكورد">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/997175826208538802/1012778235915943946/fav.png" />
+    <meta property="og:type" content="website" />
+    <meta name="author" content="Ghyd Qawasmi">
     <title>Ghydq</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
