--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="og:description" content="مرحبا بكم في موقعي الخاص">
     <meta name="keywords" content="مواقع, قوالب, دسكورد">
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/997175826208538802/1012778235915943946/fav.png" />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="portfolio" />
+    <meta name="author" content="Ghyd Qawasmi">
+    <meta name="description" content="مرحبا بكم في موقعي الخاص">
+    <meta property="image" content="https://cdn.discordapp.com/attachments/997175826208538802/1012778235915943946/fav.png" />
+    <meta property="type" content="portfolio" />
     <meta name="author" content="Ghyd Qawasmi">
     <title>Ghydq</title>
 
