remove dark mode

--- a/index.html
+++ b/index.html
@@ -52,15 +52,6 @@
                         <a href="#contact" class="nav-link"><span data-hover="Contact">Contact</span></a>
                     </li>
                 </ul>
-
-                <ul class="navbar-nav ml-lg-auto">
-                    <div class="ml-lg-4">
-                      <div class="color-mode d-lg-flex justify-content-center align-items-center">
-                        <i class="color-mode-icon"></i>
-                        Color mode
-                      </div>
-                    </div>
-                </ul>
             </div>
         </div>
     </nav>
@@ -76,7 +67,7 @@
                         <h1 class="animated animated-text">
                             <span class="mr-2">Hey There, I'm</span>
                                 <div class="animated-info">
-                                    <span class="animated-item">Ghyd Qawasmi</span>
+                                    <span class="animated-item">Ghydq</span>
                                     <span class="animated-item"> Developer</span>
                                     <span class="animated-item"> Desginer</span>
 
