--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
     </section>
 <br><br><br>
     <!-- PROJECTS -->
-    <section class="project py-5" id="project">
+    <section class="project py-5" >
         <div class="container">
                 
                 <div class="row">
                   <div class="col-lg-11 text-center mx-auto col-12">
 
-                      <div class="col-lg-8 mx-auto">
+                      <div class="col-lg-8 mx-auto" id="project">
                         <h2>Things I have designed for digital media agencies</h2>
                       </div>
 
