--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                 <div class="row">
                   <div class="col-lg-11 text-center mx-auto col-12">
 
-                      <div class="col-lg-8 mx-auto" id="project">
+                      <div class="col-lg-8 mx-auto" >
                         <h2>Things I have designed for digital media agencies</h2>
                       </div>
 
-                      <div class="owl-carousel owl-theme">
+                      <div class="owl-carousel owl-theme" id="project">
                         <div class="item">
                           <div class="project-info">
                             <img src="images/project/project-image01.png" class="img-fluid" alt="project image">
