--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="og:description" content="مرحبا بكم في موقعي الخاص">
-    <meta name="keywords" content="مواقع, قوالب, دسكورد">
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/997175826208538802/1012778235915943946/fav.png" />
-    <meta property="og:type" content="portfolio" />
-    <meta name="author" content="Ghyd Qawasmi">
-    <meta name="description" content="مرحبا بكم في موقعي الخاص">
-    <meta property="image" content="https://cdn.discordapp.com/attachments/997175826208538802/1012778235915943946/fav.png" />
-    <meta property="type" content="portfolio" />
-    <meta name="author" content="Ghyd Qawasmi">
+    <meta property="og:image" content="https://b.top4top.io/p_2440q47fn1.png">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="This Site for Ghyd Qawasmi">
+    <meta name="twitter:description" content=" Hi,This site For hobbis,Skills And More About Ghyd Qawasmi ">
+    <meta name="twitter:image" content="https://b.top4top.io/p_2440q47fn1.png">
+    <meta name="twitter:site" content="@www.ghydq.gq">
+    <meta name="twitter:creator" content="@qghydq">
+
+      <meta property="og:title" content="This Site for Ghyd Qawasmi">
+    <meta property="og:description" content=" Hi,This site For hobbis,Skills And More About Ghyd Qawasmi">
+      <meta property="og:url" content="www.quran-quizzes.net">
+      <meta property="og:image" content="https://b.top4top.io/p_2440q47fn1.png">
+    <meta property="og:image:secure_url" content="https://b.top4top.io/p_2440q47fn1.png">
+      <meta property="og:image:type" content="image/png"> 
+    <meta property="og:image:width" content="400">
+    <meta property="og:image:height" content="300">
+    <meta property="og:type" content="website">
+
     <title>Ghydq</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -21,14 +29,14 @@
 
     <!-- MAIN STYLE -->
     <link rel="stylesheet" href="css/tooplate-style.css">
-    <link rel="shortcut icon" href="/images/fav.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://h.top4top.io/p_2440illbl1.png" type="image/x-icon">
   </head>
   <body>
 
     <!-- MENU -->
     <nav class="navbar navbar-expand-sm navbar-light">
         <div class="container">
-            <a class="navbar-brand" href="index.html"> <img src="/images/logo.png" style="height: ;"> </a>
+            <a class="navbar-brand" href="index.html"> <img src="https://g.top4top.io/p_2440tpxlg1.png" style="height: 120px;"> </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
